# ai-ucs

./: .gitignore  CMakeLists.txt  Makefile  README  Readme.txt  setup.sh
lib/: CMakeLists.txt
src/: CMakeLists.txt  game.cc  main.cc
src/include/: game.h
src/include/ai-ucs/: game.h
src/test/: CMakeLists.txt  test_game.cc
src/test/files/: test_input.txt
